manifests/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-docker-app
  labels:
    app: simple-docker-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-docker-app
  template:
    metadata:
      labels:
        app: simple-docker-app
    spec:
      serviceAccountName: wiz-app-serviceaccount
      containers:
        - name: simple-docker-app
          image: 108782097787.dkr.ecr.us-east-2.amazonaws.com/simple-docker-service-0a37c0e6438d:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
